{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 59,
  "lineage": "c5c231dc-b7e8-14fd-0615-6cf53bc644f7",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "default_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0c0bb5df2571165a9",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-0c0bb5df2571165a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 4085,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0bb5df2571165a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "vpc_id": "vpc-06ba36bca6b59f95e"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0cc813dd4d76bf797",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-0cc813dd4d76bf797",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "available_ip_address_count": 4085,
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc813dd4d76bf797",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "vpc_id": "vpc-06ba36bca6b59f95e"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": "subnet-0f768008c6324831f",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-0f768008c6324831f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "available_ip_address_count": 4067,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f768008c6324831f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "state": "available",
            "vpc_id": "vpc-06ba36bca6b59f95e"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:vpc/vpc-06ba36bca6b59f95e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-079ee5ea1da8fe27b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-03e3d26b708060323",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ba36bca6b59f95e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0542e3cdc6e78d5ee",
            "owner_id": "607700977843",
            "region": "us-east-2"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "strapi_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:607700977843:loadbalancer/app/strapi-alb-vivek/267fd079b1d3c44b",
            "arn_suffix": "app/strapi-alb-vivek/267fd079b1d3c44b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "strapi-alb-vivek-1566991487.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:607700977843:loadbalancer/app/strapi-alb-vivek/267fd079b1d3c44b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "strapi-alb-vivek",
            "preserve_host_header": false,
            "region": "us-east-2",
            "security_groups": [
              "sg-04c14996464e35865"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c0bb5df2571165a9"
              },
              {
                "subnet_id": "subnet-0f768008c6324831f"
              }
            ],
            "subnets": [
              "subnet-0c0bb5df2571165a9",
              "subnet-0f768008c6324831f"
            ],
            "tags": {
              "Name": "strapi-alb-vivek"
            },
            "tags_all": {
              "Name": "strapi-alb-vivek"
            },
            "vpc_id": "vpc-06ba36bca6b59f95e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:607700977843:loadbalancer/app/strapi-alb-vivek/267fd079b1d3c44b"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_subnets.default_public",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "strapi_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:607700977843:listener/app/strapi-alb-vivek/267fd079b1d3c44b/a90227b25f89b37e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:607700977843:targetgroup/strapi-tg-vivek/804fdd45ddfab009",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:607700977843:listener/app/strapi-alb-vivek/267fd079b1d3c44b/a90227b25f89b37e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:607700977843:loadbalancer/app/strapi-alb-vivek/267fd079b1d3c44b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:607700977843:listener/app/strapi-alb-vivek/267fd079b1d3c44b/a90227b25f89b37e"
          },
          "dependencies": [
            "aws_lb.strapi_alb",
            "aws_lb_target_group.strapi_tg",
            "aws_security_group.alb_sg",
            "data.aws_subnets.default_public",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "strapi_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:607700977843:targetgroup/strapi-tg-vivek/804fdd45ddfab009",
            "arn_suffix": "targetgroup/strapi-tg-vivek/804fdd45ddfab009",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:607700977843:targetgroup/strapi-tg-vivek/804fdd45ddfab009",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "strapi-tg-vivek",
            "port": 1337,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "strapi-tg-vivek"
            },
            "tags_all": {
              "Name": "strapi-tg-vivek"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06ba36bca6b59f95e"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:607700977843:targetgroup/strapi-tg-vivek/804fdd45ddfab009"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:security-group/sg-04c14996464e35865",
            "description": "Security group for Strapi ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c14996464e35865",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "strapi-alb-sg-vivek",
            "name_prefix": "",
            "owner_id": "607700977843",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "strapi-alb-sg-vivek"
            },
            "tags_all": {
              "Name": "strapi-alb-sg-vivek"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ba36bca6b59f95e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:security-group/sg-0ad994069839b18a8",
            "description": "Security group for Strapi ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad994069839b18a8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04c14996464e35865"
                ],
                "self": false,
                "to_port": 1337
              }
            ],
            "name": "strapi-ecs-sg-vivek-2",
            "name_prefix": "",
            "owner_id": "607700977843",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "strapi-ecs-sg-vivek"
            },
            "tags_all": {
              "Name": "strapi-ecs-sg-vivek"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ba36bca6b59f95e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:security-group/sg-09eb3381a9ad0c778",
            "description": "Security group for Strapi RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09eb3381a9ad0c778",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ad994069839b18a8"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "strapi-rds-sg-vivek",
            "name_prefix": "",
            "owner_id": "607700977843",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "strapi-rds-sg-vivek"
            },
            "tags_all": {
              "Name": "strapi-rds-sg-vivek"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ba36bca6b59f95e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:607700977843:subnet/subnet-0f1ea472d7f96c016",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.31.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1ea472d7f96c016",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "607700977843",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "strapi-private-subnet-2-vivek"
            },
            "tags_all": {
              "Name": "strapi-private-subnet-2-vivek"
            },
            "vpc_id": "vpc-06ba36bca6b59f95e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}